# TryYOLO

./: .gitignore  Dockerfile  app.py  app2.py  black_finder.py  check_torch.py  cigarette_data.yaml  config.ini  core.py  data.yaml  detect.py  docker-compose.yaml  docker-make.py  docker_make.bat  example.py  example2.py  fndBack.py  frame2timecode.py  frame_temp.py  func_expansion.py  line_filter.py  locale_text.py  main.py  main.py.save  main2.py  main3.py  messages.py  models.py  my_dataset_cigarette.yaml  pyproject.toml  requirements.txt  resume.py  setup.py  term-visual.py  termVisual.py  test-cuda.py  train.py  update_model.py  vci-worker.py  vci.py  (+3 more)
archive-files/: docker_make.bat  func_expansion.py  worker.py
cigar\train/: args.yaml
cigarette/train/: args.yaml  results.csv
datasets/cigarette/: classes.txt  notes.json
test/labels/: 000049_jpg.rf.4c857e5675ba60a533795dc3851e46e4.txt  000069_jpg.rf.f0d383f10e01d2bf36059c0c5c1b1036.txt  000259_jpg.rf.1ab29802c4ffc7816bf37c593e314581.txt  294_strawberry_jpg.rf.372acda4d0243cd46032a92bf57ccd33.txt  315_strawberry_jpg.rf.1d59bcdaab956b89962ccbf2f5b4fe36.txt  366_strawberry_jpg.rf.1cd66fab3a6a1f8c0eebca152df261e0.txt  537_strawberry_jpg.rf.f60738daedd40980ff0ba5fde51b17b0.txt  Y2Mate_is-People-Cigarette-Smoking-HD-Stock-Video-Free-stock-footage-No-Copyright-All-Video-Free-6OvL4ND5N_M-720p-1658949280708_mp4-130_jpg.rf.7279922882216af8dd0de8282c754f81.txt  (+114 more)
tests/: test.py  test_start_predict.py
trained_models/from-nik/: args.yaml  results.csv
valid/: labels.cache
(+513 files in other folders)
